Closed Bug 1636525 Opened 5 years ago Closed 5 years ago

Assertion failure: [GFX1]: mBindFailureGuard failure: Generating error <enum 0x0502>: WebGL warning: endQuery: Query target not active., at /builds/worker/checkouts/gecko/gfx/2d/Logging.h:756

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- wontfix
firefox77 --- wontfix
firefox78 --- verified

People

(Reporter: jkratzer, Assigned: jgilbert)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase, Whiteboard: [bugmon:bisected,confirmed])

Attachments

(2 files)

Attached file testcase.html

Testcase found while fuzzing mozilla-central rev 19e273db8019 (buitl with --enable-debug).

Assertion failure: [GFX1]: mBindFailureGuard failure: Generating error <enum 0x0502>: WebGL warning: endQuery: Query target not active., at /builds/worker/checkouts/gecko/gfx/2d/Logging.h:756

rax = 0x00007f7cb3bb1cb7   rdx = 0x0000000000000000
rcx = 0x000055e81239da48   rbx = 0x00007f7cb3bb1c5f
rsi = 0x00007f7cc4d518b0   rdi = 0x00007f7cc4d50680
rbp = 0x00007ffd6789e200   rsp = 0x00007ffd6789e1f0
r8 = 0x00007f7cc4d518b0    r9 = 0x00007f7cc5eb7780
r10 = 0x0000000000000002   r11 = 0x0000000000000000
r12 = 0x00007ffd6789e2d0   r13 = 0xfff9800000000000
r14 = 0x00007ffd6789e240   r15 = 0x00007ffd6789e240
rip = 0x00007f7cac82f3a3
OS|Linux|0.0.0 Linux 5.3.0-46-generic #38~18.04.1-Ubuntu SMP Tue Mar 31 04:17:56 UTC 2020 x86_64
CPU|amd64|family 6 model 94 stepping 3|8
GPU|||
Crash|SIGSEGV|0x0|0
0|0|libxul.so|mozilla::gfx::Log<1, mozilla::gfx::CriticalLogger>::WriteLog(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)|hg:hg.mozilla.org/mozilla-central:gfx/2d/Logging.h:19e273db80195cc5de59647fcaf16bafad9bbcce|757|0x25
0|1|libxul.so|mozilla::gfx::Log<1, mozilla::gfx::CriticalLogger>::Flush()|hg:hg.mozilla.org/mozilla-central:gfx/2d/Logging.h:19e273db80195cc5de59647fcaf16bafad9bbcce|279|0x8
0|2|libxul.so|mozilla::gfx::Log<1, mozilla::gfx::CriticalLogger>::~Log()|hg:hg.mozilla.org/mozilla-central:gfx/2d/Logging.h:19e273db80195cc5de59647fcaf16bafad9bbcce|272|0xe
0|3|libxul.so|mozilla::WebGLContext::GenerateErrorImpl(unsigned int, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&) const|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGLContext.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1873|0x5
0|4|libxul.so|mozilla::WebGLContext::GenerateErrorImpl(unsigned int, nsTSubstring<char> const&) const|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGLContext.h:19e273db80195cc5de59647fcaf16bafad9bbcce|386|0x21
0|5|libxul.so|void mozilla::WebGLContext::GenerateError<>(unsigned int, char const*) const|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGLContext.h:19e273db80195cc5de59647fcaf16bafad9bbcce|412|0xe
0|6|libxul.so|mozilla::WebGLContext::EndQuery(unsigned int)|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGL2ContextQueries.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|95|0x14
0|7|libxul.so|void mozilla::RunOn<void (mozilla::HostWebGLContext::*)(unsigned int) const, &(mozilla::HostWebGLContext::EndQuery(unsigned int) const), void, unsigned int const&>(mozilla::ClientWebGLContext const&, unsigned int const&)|hg:hg.mozilla.org/mozilla-central:dom/canvas/ClientWebGLContext.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|372|0x17
0|8|libxul.so|mozilla::ClientWebGLContext::EndQuery(unsigned int)|hg:hg.mozilla.org/mozilla-central:dom/canvas/ClientWebGLContext.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|4253|0x8
0|9|libxul.so|mozilla::ClientWebGLContext::DeleteQuery(mozilla::WebGLQueryJS*)|hg:hg.mozilla.org/mozilla-central:dom/canvas/ClientWebGLContext.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1354|0xc
0|10|libxul.so|mozilla::dom::WebGL2RenderingContext_Binding::deleteQuery(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&)|s3:gecko-generated-sources:31bb1b01d03e6fca5d278983c21d284828c80bc94ea706cd3bad91a7446ca3199512dcf3d1c39abc0d9d644a88da42a33e85ca815b69fd7c7cd72197e96a1edb/dom/bindings/WebGL2RenderingContextBinding.cpp:|7865|0x8
0|11|libxul.so|bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|3203|0x21
0|12|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|493|0x12
0|13|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|585|0xe
0|14|libxul.so|Interpret(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|652|0xa
0|15|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|465|0xb
0|16|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|620|0x8
0|17|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|665|0xb
0|18|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|2840|0x23
0|19|libxul.so|mozilla::dom::EventListener::HandleEvent(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&)|s3:gecko-generated-sources:2563ad09677feb8ddf64827a409899848ef6a80bfacaa11f581c512536a6fb0c779d8b29517ba6358a054c6d475f770bf7bac2913a941d0394881c5649b08603/dom/bindings/EventListenerBinding.cpp:|55|0xe
0|20|libxul.so|void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:99837b3cdc69c5eb1234f9d2b3e771dcff734d56a022bedb1d00c0cf4ee6243fb5c91397a058f2ddab63bda8ed6b581ea1232a0229033866910c7289d24cbc2d/dist/include/mozilla/dom/EventListenerBinding.h:|66|0x21
0|21|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1073|0x2c
0|22|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1271|0x16
0|23|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|356|0xb
0|24|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|558|0x19
0|25|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1055|0x5
0|26|libxul.so|mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|0|0x8
0|27|libxul.so|nsINode::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1302|0x10
0|28|libxul.so|nsContentUtils::DispatchEvent(mozilla::dom::Document*, nsISupports*, nsTSubstring<char16_t> const&, mozilla::CanBubble, mozilla::Cancelable, mozilla::Composed, mozilla::Trusted, bool*, mozilla::ChromeOnlyDispatch)|hg:hg.mozilla.org/mozilla-central:dom/base/nsContentUtils.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|4026|0x23
0|29|libxul.so|nsContentUtils::DispatchTrustedEvent(mozilla::dom::Document*, nsISupports*, nsTSubstring<char16_t> const&, mozilla::CanBubble, mozilla::Cancelable, mozilla::Composed, bool*)|hg:hg.mozilla.org/mozilla-central:dom/base/nsContentUtils.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|3996|0x23
0|30|libxul.so|mozilla::dom::Document::DispatchContentLoadedEvents()|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|7216|0x21
0|31|libxul.so|mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.h:19e273db80195cc5de59647fcaf16bafad9bbcce|1220|0x17
0|32|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|146|0x11
0|33|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|1200|0x11
0|34|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|481|0xc
0|35|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|87|0x7
0|36|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:19e273db80195cc5de59647fcaf16bafad9bbcce|315|0x17
0|37|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:19e273db80195cc5de59647fcaf16bafad9bbcce|290|0x8
0|38|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|137|0xd
0|39|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|909|0xe
0|40|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|237|0x5
0|41|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:19e273db80195cc5de59647fcaf16bafad9bbcce|315|0x17
0|42|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:19e273db80195cc5de59647fcaf16bafad9bbcce|290|0x8
0|43|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|740|0x5
0|44|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|56|0x11
0|45|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:19e273db80195cc5de59647fcaf16bafad9bbcce|303|0x20
0|46|libc.so.6||||0x21b97
0|47|firefox-bin|<name omitted>|hg:hg.mozilla.org/mozilla-central:mfbt/UniquePtr.h:19e273db80195cc5de59647fcaf16bafad9bbcce|253|0x17
Flags: in-testsuite?

Because this bug's Severity is normal and has not been changed, and this bug's priority is -- (none,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)

Severity: normal → --
Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]
Bugmon Analysis: Verified bug as reproducible on mozilla-central 20200519094847-96c90df47bda. The bug appears to have been introduced in the following build range: > Start: 5cbf5bb11c585d69321b420f67ffb62544141427 (20200108215517) > End: e1b0906509efa6433978b9f980ec639b7eafbc6d (20200108222028) > Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5cbf5bb11c585d69321b420f67ffb62544141427&tochange=e1b0906509efa6433978b9f980ec639b7eafbc6d

The severity field is not set for this bug.
:jgilbert, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jgilbert)
Assignee: nobody → jgilbert
Severity: -- → S3
Flags: needinfo?(jgilbert)
Priority: -- → P1
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7ea25549ca31 Implicitly EndQuery before DeleteQuery. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Status: RESOLVED → VERIFIED
Keywords: bugmon
Bugmon Analysis: Verified bug as fixed on rev mozilla-central 20200527161431-a1dd9afbfdf5. Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

:jgilbert, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(jgilbert)
Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: