Bug 1636525 - Implicitly EndQuery before DeleteQuery. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D76941